--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./estilos/index.css">
     <title>Portfolio: Mario Morales</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/feed.xml">
 </head>
 <body>
     <header>
@@ -27,5 +28,8 @@
             </a>
         </div>
     </header>
+    <a href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/feed.xml" target="_blank">
+    📡 Suscribirse al RSS
+</a>
 </body>
 </html>
