--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </a>
         </div>
     </header>
-    <a href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/feed.xml" target="_blank">
-    📡 Suscribirse al RSS
-</a>
+    <a href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/feed.xml" target="_blank"class="social-icon rss-icon">
+     <i class="fas fa-rss"></i>
+    </a>
 </body>
 </html>
