--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio: Mario Morales</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/feed.xml">
+    <link rel="alternate" type="application/atom+xml" title="Feed Atom - Portfolio de Mario Morales" href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/atom.xml">
 </head>
 <body>
     <header>
@@ -29,6 +30,10 @@
             <a href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/feed.xml" target="_blank"class="social-icon rss-icon">
                 <i class="fas fa-rss"></i>
             </a>
+            <a href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/atom.xml" title="Suscríbete al Feed Atom">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Feed-icon.svg" alt="Feed Atom" width="40" height="40">
+            </a>
+
         </div>
     </header>
 </body>
