--- a/menu/menu.html
+++ b/menu/menu.html
@@ -54,7 +54,7 @@
             <a href="../paginas/implantacion_de_sistemas_operativos.html" class="menu-item">
                 <div class="dodecahedron">
                     <span>Implantación de Sistemas Operativos</span>
-                    <img source="../imagen/sistemas"
+                    <img href="../imagen/sistemas.jpeg">
                 </div>
             </a>
         </div>
