--- a/menu/menu.html
+++ b/menu/menu.html
@@ -3,69 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú de Apartados</title>
+    <title>Menú de Asignaturas</title>
     <link rel="stylesheet" href="../estilos/menu.css">
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <header>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/tu_usuario" target="_blank" class="social-icon">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/tu_usuario" target="_blank" class="social-icon">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/tu_usuario" target="_blank" class="social-icon">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="https://genial.ly/tu_usuario" target="_blank" class="social-icon">
-                <i class="fab fa-genially"></i>
-            </a>
-        </div>
+    <header>
+        <h1>Asignaturas ASIR</h1>
     </header>
-    <div class="menu">
-        <div class="top-row">
-            <a href="../paginas/fundamentos_del_hardware.html" class="menu-item1">
-                <div class="dodecahedron">
-                    <span>Fundamentos del Hardware</span>
-                </div>
-            </a>
-
-            <a href="../paginas/redes.html" class="menu-item2">
-                <div class="dodecahedron">
-                    <span>Redes</span>
-                </div>
-            </a>
-
-            <a href="../paginas/base_de_datos.html" class="menu-item">
-                <div class="dodecahedron">
-                    <span>Base de Datos</span>
-                </div>
-            </a>
-        </div>
-        <div class="medium-row">
-            <a href="../paginas/lenguaje_de_marcas.html" class="menu-item3">
-                <div class="dodecahedron">
-                    <span>Lenguaje de Marcas</span>
-                </div>
-            </a>
-
-            <a href="../paginas/implantacion_de_sistemas_operativos.html" class="menu-item">
-                <div class="dodecahedron">
-                    <span>Implantación de Sistemas Operativos</span>
-                    <img href="../imagen/sistemas.jpeg">
-                </div>
-            </a>
-        </div>
-        <div class="bottom-row">
-            <a href="../paginas/datos_personales.html" class="menu-item4">
-                <div class="dodecahedron">
-                    <span>Datos Personales</span>
-                </div>
-            </a>
-       </div>
-    </div>
-    
+    <main class="menu-grid">
+        <a href="../paginas/lenguaje_de_marcas.html" class="menu-item">
+            <img src="../imagen/lenguaje-marcas.jpeg" alt="Lenguaje de marcas">
+            <span>Lenguaje de marcas</span>
+        </a>
+        <a href="../paginas/redes.html" class="menu-item">
+            <img src="../imagen/redes.jpeg" alt="Redes">
+            <span>Redes</span>
+        </a>
+        <a href="../paginas/fundamentos_del_hardware.html" class="menu-item">
+            <img src="../imagen/fundamentos-hardware.jpg" alt="Fundamentos del hardware">
+            <span>Fundamentos del hardware</span>
+        </a>
+        <a href="../paginas/implantacion_de_sistemas_operativos.html" class="menu-item">
+            <img src="../imagen/sistemas.jpeg" alt="Sistemas operativos">
+            <span>Sistemas operativos</span>
+        </a>
+        <a href="../paginas/base_de_datos.html" class="menu-item">
+            <img src="../imagen/base-datos.jpg" alt="Base de datos">
+            <span>Base de datos</span>
+        </a>
+    </main>
 </body>
 </html>
+
