--- a/menu/menu.html
+++ b/menu/menu.html
@@ -32,5 +32,8 @@
             <span>Base de datos</span>
         </a>
     </main>
+        <div class="volver-contenedor">
+        <a href="../index.html" class="boton-volver">Volver al inicio</a>
+    </div>
 </body>
 </html>
