--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
     <header>
-        <a rel="archives" type="html" href="./menu/menu.html" id="enlace">
-            <h1 id="titulop">MARIO MORALES BEJARANO</h1>
-        </a> 
+        <h1 id="titulop">MARIO MORALES BEJARANO</h1>
         <p id="subtitulo">Estudiante 1º ASIR</p>
+        <p><a href="./menu/menu.html" id="enlace">Pincha aquí para comenzar</a></p> 
         <div class="social-icons">
             <a href="https://www.instagram.com/tu_usuario" target="_blank" class="social-icon">
                 <i class="fab fa-instagram"></i>
@@ -27,13 +26,12 @@
             <a href="https://genial.ly/tu_usuario" target="_blank" class="social-icon">
                 <i class="fab fa-genially"></i>
             </a>
-            <a href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/feed.xml" target="_blank"class="social-icon rss-icon">
+            <a href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/feed.xml" target="_blank" class="social-icon rss-icon">
                 <i class="fas fa-rss"></i>
             </a>
             <a href="https://mario-morales-bejarano.github.io/ASIRlenguajemarcas/atom.xml" title="Suscríbete al Feed Atom">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Feed-icon.svg" alt="Feed Atom" width="40" height="40">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Feed-icon.svg" alt="Feed Atom" width="40" height="40">
             </a>
-
         </div>
     </header>
 </body>
